--- a/daily-vfx/src/index.css
+++ b/daily-vfx/src/index.css
@@ -34,7 +34,7 @@ h1 {
   line-height: 1.1;
 }
 
-button {
+button:not([class*="bg-"]) { /* <--- 修改這裡 */
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
@@ -45,8 +45,9 @@ button {
   cursor: pointer;
   transition: border-color 0.25s;
 }
+
 button:hover {
-  border-color: #646cff;
+  border-color: #404052;
 }
 button:focus,
 button:focus-visible {
@@ -59,9 +60,9 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #6165a3;
   }
-  button {
+  button:not([class*="bg-"]) { /* <--- 和這裡 */
     background-color: #f9f9f9;
   }
 }
